bugfix: push .lzy-skiplinks further out of view

--- a/css/scss/_lizzy_core.scss
+++ b/css/scss/_lizzy_core.scss
@@ -134,7 +134,7 @@ figure a {
 .lzy-skiplinks a {
 	position: absolute;
 	top: 0;
-	right: 100%;
+	left: 10000vw;
 }
 .lzy-skiplinks a:focus {
 	right: auto;
